Fix bugs with user and user.settings lacking guards if no value. Also allowed prompt in quiz to wrap and show longer prompts

--- a/app/components/Card/Card.module.css
+++ b/app/components/Card/Card.module.css
@@ -62,8 +62,6 @@ a.container:hover {
     margin: 0;
     font-size: 20px;
     font-weight: 500;
-    overflow: hidden;
-    white-space: nowrap;
     color: var(--text-1);
     text-overflow: ellipsis;
 }
